2007-05-28 Peter Brett <peter@peter-b.co.uk>

	* include/prototype.h, src/g_rc.c, src/g_register.c: Add & update
	  Scheme callbacks for new component library.
	
	  Add the (component-library-command) function, and make
	  (component-library) take an optional second argument for the
	  directory's source name.
	
	* include/prototype.h, src/g_rc.c, src/s_clib.c: Provide better
	  names for component sources.

	  Full pathnames aren't very user-friendly in the component
	  browser, and sometimes the name you want for your component
	  source isn't the same as the directory name. This patch provides
	  an infrastructure for better source naming, while falling back
	  to the "classic" behaviour if necessary.

	* include/prototype.h, include/struct.h, src/a_basic.c,
	  src/o_complex_basic.c, src/o_embed.c, src/o_list.c,
	  src/s_basic.c, src/s_clib.c, src/s_hierarchy.c,
	  src/s_toplevel.c: Implement new component library system in
	  libgeda.

	  A new component library model is needed to allow gschem etc.  to
	  work well with part database systems.  This patch provides the
	  necessary infrastructure in libgeda, without the frontend Guile
	  commands required to make use of the new features.  In
	  particular, it abstracts the component library into the concepts
	  of "Component Sources" and "Symbols", and allows external
	  "Library Commands" to provide symbol data in addition to the
	  traditional directory libraries.

	  In order to allow the new system to work, there are major
	  changes in all code which manipulates COMPLEX objects; in
	  particular, the magic "EMBEDDED" string is now only used in the
	  on-disc representation.
	
	* include/prototype.h, src/a_basic.c, src/o_attrib.c,
	  src/o_picture.c, o_text_basic.c: Make libgeda parse schematics
	  from buffered data.

	  In order to support more complex methods of acquiring symbol
	  data, libgeda needs to be able to load schematics and symbols
	  directly from a memory buffer as well as from files.
	